-- MySQL Script generated by MySQL Workbench
-- Sat Jul  8 12:53:24 2023
-- Model: New Model    Version: 1.0
-- MySQL Workbench Forward Engineering

SET @OLD_UNIQUE_CHECKS=@@UNIQUE_CHECKS, UNIQUE_CHECKS=0;
SET @OLD_FOREIGN_KEY_CHECKS=@@FOREIGN_KEY_CHECKS, FOREIGN_KEY_CHECKS=0;
SET @OLD_SQL_MODE=@@SQL_MODE, SQL_MODE='ONLY_FULL_GROUP_BY,STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_ENGINE_SUBSTITUTION';

-- -----------------------------------------------------
-- Schema mydb
-- -----------------------------------------------------
DROP SCHEMA IF EXISTS `mydb` ;

-- -----------------------------------------------------
-- Schema mydb
-- -----------------------------------------------------
CREATE SCHEMA IF NOT EXISTS `mydb` DEFAULT CHARACTER SET utf8 ;
SHOW WARNINGS;
USE `mydb` ;

-- -----------------------------------------------------
-- Table `Cliente`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `Cliente` ;

SHOW WARNINGS;
CREATE TABLE IF NOT EXISTS `Cliente` (
  `id` INT GENERATED ALWAYS AS () VIRTUAL,
  `identificacion` VARCHAR(45) NOT NULL,
  `nombre` VARCHAR(45) NULL,
  `apellido` VARCHAR(45) NULL,
  `edad` DATETIME(6) NULL,
  `tipo_ident` INT NOT NULL,
  `correo` NVARCHAR(50) NULL,
  PRIMARY KEY (`id`, `identificacion`, `tipo_ident`))
ENGINE = InnoDB;

SHOW WARNINGS;

-- -----------------------------------------------------
-- Table `Roles`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `Roles` ;

SHOW WARNINGS;
CREATE TABLE IF NOT EXISTS `Roles` (
  `id` INT NOT NULL,
  `rol` VARCHAR(45) NULL,
  PRIMARY KEY (`id`))
ENGINE = InnoDB;

SHOW WARNINGS;

-- -----------------------------------------------------
-- Table `Roles_Clientes`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `Roles_Clientes` ;

SHOW WARNINGS;
CREATE TABLE IF NOT EXISTS `Roles_Clientes` (
  `id_cliente` INT NOT NULL,
  `id_rol` INT NULL,
  PRIMARY KEY (`id_cliente`))
ENGINE = InnoDB;

SHOW WARNINGS;

-- -----------------------------------------------------
-- Table `Sesiones`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `Sesiones` ;

SHOW WARNINGS;
CREATE TABLE IF NOT EXISTS `Sesiones` (
  `correo` NVARCHAR(50) NOT NULL,
  `contrasenia` VARCHAR(260) NULL,
  PRIMARY KEY (`correo`))
ENGINE = InnoDB;

SHOW WARNINGS;

-- -----------------------------------------------------
-- Table `Tipo_Identificacion`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `Tipo_Identificacion` ;

SHOW WARNINGS;
CREATE TABLE IF NOT EXISTS `Tipo_Identificacion` (
  `id` INT GENERATED ALWAYS AS () VIRTUAL,
  `tipo_corto` VARCHAR(5) NULL,
  `tipo_largo` VARCHAR(45) NULL,
  PRIMARY KEY (`id`))
ENGINE = InnoDB;

SHOW WARNINGS;

SET SQL_MODE=@OLD_SQL_MODE;
SET FOREIGN_KEY_CHECKS=@OLD_FOREIGN_KEY_CHECKS;
SET UNIQUE_CHECKS=@OLD_UNIQUE_CHECKS;
