erDiagram
    CLIENTE {
        int id PK
        string identificacion
        string nombre
        string apellido
        datetime edad
        int tipo_ident FK
        string correo
    }
    ROLES {
        int id PK
        string rol
    }
    ROLES_CLIENTES {
        int id_cliente FK
        int id_rol FK
    }
    SESIONES {
        string correo PK
        string contrasenia
    }
    TIPO_IDENTIFICACION {
        int id PK
        string tipo_corto
        string tipo_largo
    }

    TIPO_IDENTIFICACION ||--o{ CLIENTE : clasifica
    CLIENTE ||--o{ ROLES_CLIENTES : tiene
    ROLES ||--o{ ROLES_CLIENTES : asigna
